# Data61-Course

./: README.markdown  course.cabal
src/Course/: Applicative.hs  FileIO.hs  Functor.hs  List.hs  Monad.hs  Optional.hs
